<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/dialog_wifi_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="LENOVO"/>

    <TextView
        android:id="@+id/password_hint"
        android:layout_below="@+id/dialog_wifi_name"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/password_Et"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_hint"
        android:inputType="textPassword"
        />

    <LinearLayout
        android:layout_below="@+id/password_Et"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@color/transparent"
            />

        <Button
            android:id="@+id/ensure_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ensure"
            android:background="@color/transparent"
            />

    </LinearLayout>

</RelativeLayout>