<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/tv_wlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wlan_connect"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/Next_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentRight="true"
        android:background="@color/transparent"
        />

    <TextView
        android:id="@+id/underline1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grep_background"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_wlan"/>

    <ListView
        android:id="@+id/wlan_listView"
        android:layout_below="@+id/underline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"
        android:divider="@color/grep_background">

    </ListView>

    <TextView
        android:id="@+id/search_wlan_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_wlan"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_centerInParent="true"/>

</RelativeLayout>
